feat(products): add search route
